<resources>
    <string name="app_name">TapisIrisi</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="connexion">CONNEXION</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">Or</string>
    <string name="new_user_register_now">Create new Compte</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="image">Image</string>
    <string name="logout">Logout</string>
    <string name="Apropos">A propos</string>
    <string name="Password">Mot de passe actuel</string>
    <string name="newpassword">Nouveau Mot de passe</string>
    <string name="confirm">Confirmation Mot de passe</string>
    <string name="save">Enregistrer</string>
    <string name="home">Home</string>
    <string name="Add">Add</string>
    <string name="Account">Account</string>
    <string name="take_img">Essayer de prendre une photo de votre motif</string>
    <string name="capturer">Capturer</string>
    <string name="chercher">Chercher</string>
    <string name="libelle">Libelle</string>
    <string name="desciption">Description</string>
    <string name="ajouter_un_nouveaux_motif">Ajouter Un Nouveaux Motif</string>
    <string name="ajouter_photo">Ajouter une photo</string>
    <string name="enregistre">Enregistrer</string>
</resources>