<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_capturer"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/hand_holding_smartphone_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vector" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/take_img"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_capturer" />

    <!--    <View-->
    <!--        android:id="@+id/vector"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="151dp"-->
    <!--        -->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView0">

        <Button
            android:id="@+id/button_start_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn"
            android:text="@string/capturer"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/chercher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:visibility="gone"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@drawable/round_btn"
            android:text="@string/chercher"
            android:textColor="#FFF" />
    </LinearLayout>

    <View
        android:id="@+id/vector"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:background="@drawable/header_v"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- drawable/vector.xml -->

</androidx.constraintlayout.widget.ConstraintLayout>